# tele-rest-cpp-qt

./: README.md
.github/workflows/: c-cpp.yml
client/: CMakeLists.txt  OAIAcceptedGiftTypes.cpp  OAIAcceptedGiftTypes.h  OAIAddStickerToSetRequest.cpp  OAIAddStickerToSetRequest.h  OAIAddStickerToSetResponse.cpp  OAIAddStickerToSetResponse.h  OAIAffiliateInfo.cpp  OAIAffiliateInfo.h  OAIAnimation.cpp  OAIAnimation.h  OAIAnswerCallbackQueryRequest.cpp  OAIAnswerCallbackQueryRequest.h  OAIAnswerCallbackQueryResponse.cpp  OAIAnswerCallbackQueryResponse.h  OAIAnswerInlineQueryRequest.cpp  OAIAnswerInlineQueryRequest.h  OAIAnswerInlineQueryResponse.cpp  OAIAnswerInlineQueryResponse.h  OAIAnswerPreCheckoutQueryRequest.cpp  OAIAnswerPreCheckoutQueryRequest.h  OAIAnswerPreCheckoutQueryResponse.cpp  OAIAnswerPreCheckoutQueryResponse.h  OAIAnswerShippingQueryRequest.cpp  OAIAnswerShippingQueryRequest.h  OAIAnswerShippingQueryResponse.cpp  OAIAnswerShippingQueryResponse.h  OAIAnswerWebAppQueryRequest.cpp  OAIAnswerWebAppQueryRequest.h  OAIAnswerWebAppQueryResponse.cpp  OAIAnswerWebAppQueryResponse.h  OAIApproveChatJoinRequestRequest.cpp  OAIApproveChatJoinRequestRequest.h  OAIApproveChatJoinRequestResponse.cpp  OAIApproveChatJoinRequestResponse.h  OAIAudio.cpp  OAIAudio.h  OAIBackgroundFill.cpp  OAIBackgroundFill.h  OAIBackgroundFillFreeformGradient.cpp  (+1800 more)
