cmake_minimum_required(VERSION 3.5)

project(tele_rest)

set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Gui)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME}
  OAIAcceptedGiftTypes.h
  OAIAffiliateInfo.h
  OAIAnimation.h
  OAIAudio.h
  OAIBackgroundFill.h
  OAIBackgroundFillFreeformGradient.h
  OAIBackgroundFillGradient.h
  OAIBackgroundFillSolid.h
  OAIBackgroundType.h
  OAIBackgroundTypeChatTheme.h
  OAIBackgroundTypeFill.h
  OAIBackgroundTypePattern.h
  OAIBackgroundTypeWallpaper.h
  OAIBirthdate.h
  OAIBotCommand.h
  OAIBotCommandScope.h
  OAIBotCommandScopeAllChatAdministrators.h
  OAIBotCommandScopeAllGroupChats.h
  OAIBotCommandScopeAllPrivateChats.h
  OAIBotCommandScopeChat.h
  OAIBotCommandScopeChatAdministrators.h
  OAIBotCommandScopeChatMember.h
  OAIBotCommandScopeDefault.h
  OAIBotDescription.h
  OAIBotName.h
  OAIBotShortDescription.h
  OAIBusinessBotRights.h
  OAIBusinessConnection.h
  OAIBusinessIntro.h
  OAIBusinessLocation.h
  OAIBusinessMessagesDeleted.h
  OAIBusinessOpeningHours.h
  OAIBusinessOpeningHoursInterval.h
  OAICallbackQuery.h
  OAIChat.h
  OAIChatAdministratorRights.h
  OAIChatBackground.h
  OAIChatBoost.h
  OAIChatBoostAdded.h
  OAIChatBoostRemoved.h
  OAIChatBoostSource.h
  OAIChatBoostSourceGiftCode.h
  OAIChatBoostSourceGiveaway.h
  OAIChatBoostSourcePremium.h
  OAIChatBoostUpdated.h
  OAIChatFullInfo.h
  OAIChatInviteLink.h
  OAIChatJoinRequest.h
  OAIChatLocation.h
  OAIChatMember.h
  OAIChatMemberAdministrator.h
  OAIChatMemberBanned.h
  OAIChatMemberLeft.h
  OAIChatMemberMember.h
  OAIChatMemberOwner.h
  OAIChatMemberRestricted.h
  OAIChatMemberUpdated.h
  OAIChatPermissions.h
  OAIChatPhoto.h
  OAIChatShared.h
  OAIChosenInlineResult.h
  OAIContact.h
  OAICopyTextButton.h
  OAIDice.h
  OAIDocument.h
  OAIEncryptedCredentials.h
  OAIEncryptedPassportElement.h
  OAIError.h
  OAIExternalReplyInfo.h
  OAIFile.h
  OAIForceReply.h
  OAIForumTopic.h
  OAIForumTopicCreated.h
  OAIForumTopicEdited.h
  OAIGame.h
  OAIGameHighScore.h
  OAIGift.h
  OAIGiftInfo.h
  OAIGifts.h
  OAIGiveaway.h
  OAIGiveawayCompleted.h
  OAIGiveawayCreated.h
  OAIGiveawayWinners.h
  OAIInaccessibleMessage.h
  OAIInlineKeyboardButton.h
  OAIInlineKeyboardMarkup.h
  OAIInlineQuery.h
  OAIInlineQueryResult.h
  OAIInlineQueryResultArticle.h
  OAIInlineQueryResultAudio.h
  OAIInlineQueryResultCachedAudio.h
  OAIInlineQueryResultCachedDocument.h
  OAIInlineQueryResultCachedGif.h
  OAIInlineQueryResultCachedMpeg4Gif.h
  OAIInlineQueryResultCachedPhoto.h
  OAIInlineQueryResultCachedSticker.h
  OAIInlineQueryResultCachedVideo.h
  OAIInlineQueryResultCachedVoice.h
  OAIInlineQueryResultContact.h
  OAIInlineQueryResultDocument.h
  OAIInlineQueryResultGame.h
  OAIInlineQueryResultGif.h
  OAIInlineQueryResultLocation.h
  OAIInlineQueryResultMpeg4Gif.h
  OAIInlineQueryResultPhoto.h
  OAIInlineQueryResultVenue.h
  OAIInlineQueryResultVideo.h
  OAIInlineQueryResultVoice.h
  OAIInlineQueryResultsButton.h
  OAIInputContactMessageContent.h
  OAIInputInvoiceMessageContent.h
  OAIInputLocationMessageContent.h
  OAIInputMedia.h
  OAIInputMediaAnimation.h
  OAIInputMediaAudio.h
  OAIInputMediaDocument.h
  OAIInputMediaPhoto.h
  OAIInputMediaVideo.h
  OAIInputMessageContent.h
  OAIInputPaidMedia.h
  OAIInputPaidMediaPhoto.h
  OAIInputPaidMediaVideo.h
  OAIInputPollOption.h
  OAIInputProfilePhoto.h
  OAIInputProfilePhotoAnimated.h
  OAIInputProfilePhotoStatic.h
  OAIInputSticker.h
  OAIInputStoryContent.h
  OAIInputStoryContentPhoto.h
  OAIInputStoryContentVideo.h
  OAIInputTextMessageContent.h
  OAIInputVenueMessageContent.h
  OAIInvoice.h
  OAIKeyboardButton.h
  OAIKeyboardButtonPollType.h
  OAIKeyboardButtonRequestChat.h
  OAIKeyboardButtonRequestUsers.h
  OAILabeledPrice.h
  OAILinkPreviewOptions.h
  OAILocation.h
  OAILocationAddress.h
  OAILoginUrl.h
  OAIMaskPosition.h
  OAIMaybeInaccessibleMessage.h
  OAIMenuButton.h
  OAIMenuButtonCommands.h
  OAIMenuButtonDefault.h
  OAIMenuButtonWebApp.h
  OAIMessage.h
  OAIMessageAutoDeleteTimerChanged.h
  OAIMessageEntity.h
  OAIMessageId.h
  OAIMessageOrigin.h
  OAIMessageOriginChannel.h
  OAIMessageOriginChat.h
  OAIMessageOriginHiddenUser.h
  OAIMessageOriginUser.h
  OAIMessageReactionCountUpdated.h
  OAIMessageReactionUpdated.h
  OAIOrderInfo.h
  OAIOwnedGift.h
  OAIOwnedGiftRegular.h
  OAIOwnedGiftUnique.h
  OAIOwnedGifts.h
  OAIPaidMedia.h
  OAIPaidMediaInfo.h
  OAIPaidMediaPhoto.h
  OAIPaidMediaPreview.h
  OAIPaidMediaPurchased.h
  OAIPaidMediaVideo.h
  OAIPaidMessagePriceChanged.h
  OAIPassportData.h
  OAIPassportElementError.h
  OAIPassportElementErrorDataField.h
  OAIPassportElementErrorFile.h
  OAIPassportElementErrorFiles.h
  OAIPassportElementErrorFrontSide.h
  OAIPassportElementErrorReverseSide.h
  OAIPassportElementErrorSelfie.h
  OAIPassportElementErrorTranslationFile.h
  OAIPassportElementErrorTranslationFiles.h
  OAIPassportElementErrorUnspecified.h
  OAIPassportFile.h
  OAIPhotoSize.h
  OAIPoll.h
  OAIPollAnswer.h
  OAIPollOption.h
  OAIPreCheckoutQuery.h
  OAIPreparedInlineMessage.h
  OAIProximityAlertTriggered.h
  OAIReactionCount.h
  OAIReactionType.h
  OAIReactionTypeCustomEmoji.h
  OAIReactionTypeEmoji.h
  OAIReactionTypePaid.h
  OAIRefundedPayment.h
  OAIReplyKeyboardMarkup.h
  OAIReplyKeyboardRemove.h
  OAIReplyParameters.h
  OAIReplyParameters_chat_id.h
  OAIResponseParameters.h
  OAIRevenueWithdrawalState.h
  OAIRevenueWithdrawalStateFailed.h
  OAIRevenueWithdrawalStatePending.h
  OAIRevenueWithdrawalStateSucceeded.h
  OAISentWebAppMessage.h
  OAISharedUser.h
  OAIShippingAddress.h
  OAIShippingOption.h
  OAIShippingQuery.h
  OAIStarAmount.h
  OAIStarTransaction.h
  OAIStarTransactions.h
  OAISticker.h
  OAIStickerSet.h
  OAIStory.h
  OAIStoryArea.h
  OAIStoryAreaPosition.h
  OAIStoryAreaType.h
  OAIStoryAreaTypeLink.h
  OAIStoryAreaTypeLocation.h
  OAIStoryAreaTypeSuggestedReaction.h
  OAIStoryAreaTypeUniqueGift.h
  OAIStoryAreaTypeWeather.h
  OAISuccessfulPayment.h
  OAISwitchInlineQueryChosenChat.h
  OAITextQuote.h
  OAITransactionPartner.h
  OAITransactionPartnerAffiliateProgram.h
  OAITransactionPartnerChat.h
  OAITransactionPartnerFragment.h
  OAITransactionPartnerOther.h
  OAITransactionPartnerTelegramAds.h
  OAITransactionPartnerTelegramApi.h
  OAITransactionPartnerUser.h
  OAIUniqueGift.h
  OAIUniqueGiftBackdrop.h
  OAIUniqueGiftBackdropColors.h
  OAIUniqueGiftInfo.h
  OAIUniqueGiftModel.h
  OAIUniqueGiftSymbol.h
  OAIUpdate.h
  OAIUser.h
  OAIUserChatBoosts.h
  OAIUserProfilePhotos.h
  OAIUsersShared.h
  OAIVenue.h
  OAIVideo.h
  OAIVideoChatEnded.h
  OAIVideoChatParticipantsInvited.h
  OAIVideoChatScheduled.h
  OAIVideoNote.h
  OAIVoice.h
  OAIWebAppData.h
  OAIWebAppInfo.h
  OAIWebhookInfo.h
  OAIWriteAccessAllowed.h
  OAI_answerCallbackQuery_post_request.h
  OAI_answerInlineQuery_post_request.h
  OAI_answerPreCheckoutQuery_post_request.h
  OAI_answerShippingQuery_post_request.h
  OAI_answerWebAppQuery_post_200_response.h
  OAI_answerWebAppQuery_post_request.h
  OAI_approveChatJoinRequest_post_request.h
  OAI_banChatMember_post_request.h
  OAI_banChatMember_post_request_chat_id.h
  OAI_banChatSenderChat_post_request.h
  OAI_closeForumTopic_post_request.h
  OAI_convertGiftToStars_post_request.h
  OAI_copyMessage_post_200_response.h
  OAI_copyMessage_post_request.h
  OAI_copyMessages_post_request.h
  OAI_createChatInviteLink_post_200_response.h
  OAI_createChatInviteLink_post_request.h
  OAI_createChatSubscriptionInviteLink_post_request.h
  OAI_createChatSubscriptionInviteLink_post_request_chat_id.h
  OAI_createForumTopic_post_200_response.h
  OAI_createForumTopic_post_request.h
  OAI_createInvoiceLink_post_request.h
  OAI_deleteBusinessMessages_post_request.h
  OAI_deleteChatStickerSet_post_request.h
  OAI_deleteMessage_post_request.h
  OAI_deleteMessages_post_request.h
  OAI_deleteMyCommands_post_request.h
  OAI_deleteStickerFromSet_post_request.h
  OAI_deleteStickerSet_post_request.h
  OAI_deleteStory_post_request.h
  OAI_deleteWebhook_post_request.h
  OAI_editChatInviteLink_post_request.h
  OAI_editChatSubscriptionInviteLink_post_request.h
  OAI_editForumTopic_post_request.h
  OAI_editGeneralForumTopic_post_request.h
  OAI_editMessageCaption_post_request.h
  OAI_editMessageLiveLocation_post_request.h
  OAI_editMessageReplyMarkup_post_request.h
  OAI_editMessageText_post_200_response.h
  OAI_editMessageText_post_200_response_result.h
  OAI_editMessageText_post_request.h
  OAI_editMessageText_post_request_chat_id.h
  OAI_editUserStarSubscription_post_request.h
  OAI_exportChatInviteLink_post_200_response.h
  OAI_exportChatInviteLink_post_request.h
  OAI_forwardMessage_post_request.h
  OAI_forwardMessage_post_request_from_chat_id.h
  OAI_forwardMessages_post_200_response.h
  OAI_forwardMessages_post_request.h
  OAI_forwardMessages_post_request_from_chat_id.h
  OAI_getAvailableGifts_post_200_response.h
  OAI_getBusinessAccountGifts_post_200_response.h
  OAI_getBusinessAccountGifts_post_request.h
  OAI_getBusinessAccountStarBalance_post_200_response.h
  OAI_getBusinessConnection_post_200_response.h
  OAI_getBusinessConnection_post_request.h
  OAI_getChatAdministrators_post_200_response.h
  OAI_getChatMemberCount_post_200_response.h
  OAI_getChatMember_post_200_response.h
  OAI_getChatMember_post_request.h
  OAI_getChatMenuButton_post_200_response.h
  OAI_getChatMenuButton_post_request.h
  OAI_getChat_post_200_response.h
  OAI_getCustomEmojiStickers_post_request.h
  OAI_getFile_post_200_response.h
  OAI_getFile_post_request.h
  OAI_getForumTopicIconStickers_post_200_response.h
  OAI_getGameHighScores_post_200_response.h
  OAI_getGameHighScores_post_request.h
  OAI_getMe_post_200_response.h
  OAI_getMyCommands_post_200_response.h
  OAI_getMyCommands_post_request.h
  OAI_getMyDefaultAdministratorRights_post_200_response.h
  OAI_getMyDefaultAdministratorRights_post_request.h
  OAI_getMyDescription_post_200_response.h
  OAI_getMyName_post_200_response.h
  OAI_getMyName_post_request.h
  OAI_getMyShortDescription_post_200_response.h
  OAI_getStarTransactions_post_200_response.h
  OAI_getStarTransactions_post_request.h
  OAI_getStickerSet_post_200_response.h
  OAI_getStickerSet_post_request.h
  OAI_getUpdates_post_200_response.h
  OAI_getUpdates_post_request.h
  OAI_getUserChatBoosts_post_200_response.h
  OAI_getUserChatBoosts_post_request.h
  OAI_getUserChatBoosts_post_request_chat_id.h
  OAI_getUserProfilePhotos_post_200_response.h
  OAI_getUserProfilePhotos_post_request.h
  OAI_getWebhookInfo_post_200_response.h
  OAI_giftPremiumSubscription_post_request.h
  OAI_leaveChat_post_request.h
  OAI_leaveChat_post_request_chat_id.h
  OAI_pinChatMessage_post_request.h
  OAI_postStory_post_200_response.h
  OAI_promoteChatMember_post_request.h
  OAI_readBusinessMessage_post_request.h
  OAI_refundStarPayment_post_request.h
  OAI_removeBusinessAccountProfilePhoto_post_request.h
  OAI_removeUserVerification_post_request.h
  OAI_restrictChatMember_post_request.h
  OAI_restrictChatMember_post_request_chat_id.h
  OAI_revokeChatInviteLink_post_request.h
  OAI_revokeChatInviteLink_post_request_chat_id.h
  OAI_savePreparedInlineMessage_post_200_response.h
  OAI_savePreparedInlineMessage_post_request.h
  OAI_sendAnimation_post_request_animation.h
  OAI_sendAudio_post_request_audio.h
  OAI_sendAudio_post_request_thumbnail.h
  OAI_sendChatAction_post_request.h
  OAI_sendContact_post_request.h
  OAI_sendDice_post_request.h
  OAI_sendDocument_post_request_document.h
  OAI_sendGame_post_request.h
  OAI_sendGift_post_request.h
  OAI_sendGift_post_request_chat_id.h
  OAI_sendInvoice_post_request.h
  OAI_sendLocation_post_request.h
  OAI_sendMediaGroup_post_200_response.h
  OAI_sendMediaGroup_post_request_media_inner.h
  OAI_sendMessage_post_200_response.h
  OAI_sendMessage_post_request.h
  OAI_sendMessage_post_request_chat_id.h
  OAI_sendMessage_post_request_reply_markup.h
  OAI_sendPaidMedia_post_request_chat_id.h
  OAI_sendPhoto_post_request_photo.h
  OAI_sendPoll_post_request.h
  OAI_sendSticker_post_request_sticker.h
  OAI_sendVenue_post_request.h
  OAI_sendVideoNote_post_request_video_note.h
  OAI_sendVideo_post_request_cover.h
  OAI_sendVideo_post_request_video.h
  OAI_sendVoice_post_request_voice.h
  OAI_setBusinessAccountBio_post_request.h
  OAI_setBusinessAccountGiftSettings_post_request.h
  OAI_setBusinessAccountName_post_request.h
  OAI_setBusinessAccountUsername_post_request.h
  OAI_setChatAdministratorCustomTitle_post_request.h
  OAI_setChatDescription_post_request.h
  OAI_setChatMenuButton_post_request.h
  OAI_setChatPermissions_post_request.h
  OAI_setChatStickerSet_post_request.h
  OAI_setChatTitle_post_request.h
  OAI_setCustomEmojiStickerSetThumbnail_post_request.h
  OAI_setGameScore_post_request.h
  OAI_setMessageReaction_post_request.h
  OAI_setMyCommands_post_request.h
  OAI_setMyDefaultAdministratorRights_post_request.h
  OAI_setMyDescription_post_request.h
  OAI_setMyName_post_request.h
  OAI_setMyShortDescription_post_request.h
  OAI_setPassportDataErrors_post_request.h
  OAI_setStickerEmojiList_post_request.h
  OAI_setStickerKeywords_post_request.h
  OAI_setStickerMaskPosition_post_request.h
  OAI_setStickerPositionInSet_post_request.h
  OAI_setStickerSetThumbnail_post_request_thumbnail.h
  OAI_setStickerSetTitle_post_request.h
  OAI_setUserEmojiStatus_post_request.h
  OAI_setWebhook_post_200_response.h
  OAI_stopMessageLiveLocation_post_request.h
  OAI_stopPoll_post_200_response.h
  OAI_stopPoll_post_request.h
  OAI_transferBusinessAccountStars_post_request.h
  OAI_transferGift_post_request.h
  OAI_unbanChatMember_post_request.h
  OAI_unpinChatMessage_post_request.h
  OAI_upgradeGift_post_request.h
  OAI_verifyChat_post_request.h
  OAI_verifyUser_post_request.h
  OAIDefaultApi.h
  OAIHelpers.h
  OAIHttpRequest.h
  OAIObject.h
  OAIEnum.h
  OAIHttpFileElement.h
  OAIServerConfiguration.h
  OAIServerVariable.h
  OAIOauth.h
  OAIAcceptedGiftTypes.cpp
  OAIAffiliateInfo.cpp
  OAIAnimation.cpp
  OAIAudio.cpp
  OAIBackgroundFill.cpp
  OAIBackgroundFillFreeformGradient.cpp
  OAIBackgroundFillGradient.cpp
  OAIBackgroundFillSolid.cpp
  OAIBackgroundType.cpp
  OAIBackgroundTypeChatTheme.cpp
  OAIBackgroundTypeFill.cpp
  OAIBackgroundTypePattern.cpp
  OAIBackgroundTypeWallpaper.cpp
  OAIBirthdate.cpp
  OAIBotCommand.cpp
  OAIBotCommandScope.cpp
  OAIBotCommandScopeAllChatAdministrators.cpp
  OAIBotCommandScopeAllGroupChats.cpp
  OAIBotCommandScopeAllPrivateChats.cpp
  OAIBotCommandScopeChat.cpp
  OAIBotCommandScopeChatAdministrators.cpp
  OAIBotCommandScopeChatMember.cpp
  OAIBotCommandScopeDefault.cpp
  OAIBotDescription.cpp
  OAIBotName.cpp
  OAIBotShortDescription.cpp
  OAIBusinessBotRights.cpp
  OAIBusinessConnection.cpp
  OAIBusinessIntro.cpp
  OAIBusinessLocation.cpp
  OAIBusinessMessagesDeleted.cpp
  OAIBusinessOpeningHours.cpp
  OAIBusinessOpeningHoursInterval.cpp
  OAICallbackQuery.cpp
  OAIChat.cpp
  OAIChatAdministratorRights.cpp
  OAIChatBackground.cpp
  OAIChatBoost.cpp
  OAIChatBoostAdded.cpp
  OAIChatBoostRemoved.cpp
  OAIChatBoostSource.cpp
  OAIChatBoostSourceGiftCode.cpp
  OAIChatBoostSourceGiveaway.cpp
  OAIChatBoostSourcePremium.cpp
  OAIChatBoostUpdated.cpp
  OAIChatFullInfo.cpp
  OAIChatInviteLink.cpp
  OAIChatJoinRequest.cpp
  OAIChatLocation.cpp
  OAIChatMember.cpp
  OAIChatMemberAdministrator.cpp
  OAIChatMemberBanned.cpp
  OAIChatMemberLeft.cpp
  OAIChatMemberMember.cpp
  OAIChatMemberOwner.cpp
  OAIChatMemberRestricted.cpp
  OAIChatMemberUpdated.cpp
  OAIChatPermissions.cpp
  OAIChatPhoto.cpp
  OAIChatShared.cpp
  OAIChosenInlineResult.cpp
  OAIContact.cpp
  OAICopyTextButton.cpp
  OAIDice.cpp
  OAIDocument.cpp
  OAIEncryptedCredentials.cpp
  OAIEncryptedPassportElement.cpp
  OAIError.cpp
  OAIExternalReplyInfo.cpp
  OAIFile.cpp
  OAIForceReply.cpp
  OAIForumTopic.cpp
  OAIForumTopicCreated.cpp
  OAIForumTopicEdited.cpp
  OAIGame.cpp
  OAIGameHighScore.cpp
  OAIGift.cpp
  OAIGiftInfo.cpp
  OAIGifts.cpp
  OAIGiveaway.cpp
  OAIGiveawayCompleted.cpp
  OAIGiveawayCreated.cpp
  OAIGiveawayWinners.cpp
  OAIInaccessibleMessage.cpp
  OAIInlineKeyboardButton.cpp
  OAIInlineKeyboardMarkup.cpp
  OAIInlineQuery.cpp
  OAIInlineQueryResult.cpp
  OAIInlineQueryResultArticle.cpp
  OAIInlineQueryResultAudio.cpp
  OAIInlineQueryResultCachedAudio.cpp
  OAIInlineQueryResultCachedDocument.cpp
  OAIInlineQueryResultCachedGif.cpp
  OAIInlineQueryResultCachedMpeg4Gif.cpp
  OAIInlineQueryResultCachedPhoto.cpp
  OAIInlineQueryResultCachedSticker.cpp
  OAIInlineQueryResultCachedVideo.cpp
  OAIInlineQueryResultCachedVoice.cpp
  OAIInlineQueryResultContact.cpp
  OAIInlineQueryResultDocument.cpp
  OAIInlineQueryResultGame.cpp
  OAIInlineQueryResultGif.cpp
  OAIInlineQueryResultLocation.cpp
  OAIInlineQueryResultMpeg4Gif.cpp
  OAIInlineQueryResultPhoto.cpp
  OAIInlineQueryResultVenue.cpp
  OAIInlineQueryResultVideo.cpp
  OAIInlineQueryResultVoice.cpp
  OAIInlineQueryResultsButton.cpp
  OAIInputContactMessageContent.cpp
  OAIInputInvoiceMessageContent.cpp
  OAIInputLocationMessageContent.cpp
  OAIInputMedia.cpp
  OAIInputMediaAnimation.cpp
  OAIInputMediaAudio.cpp
  OAIInputMediaDocument.cpp
  OAIInputMediaPhoto.cpp
  OAIInputMediaVideo.cpp
  OAIInputMessageContent.cpp
  OAIInputPaidMedia.cpp
  OAIInputPaidMediaPhoto.cpp
  OAIInputPaidMediaVideo.cpp
  OAIInputPollOption.cpp
  OAIInputProfilePhoto.cpp
  OAIInputProfilePhotoAnimated.cpp
  OAIInputProfilePhotoStatic.cpp
  OAIInputSticker.cpp
  OAIInputStoryContent.cpp
  OAIInputStoryContentPhoto.cpp
  OAIInputStoryContentVideo.cpp
  OAIInputTextMessageContent.cpp
  OAIInputVenueMessageContent.cpp
  OAIInvoice.cpp
  OAIKeyboardButton.cpp
  OAIKeyboardButtonPollType.cpp
  OAIKeyboardButtonRequestChat.cpp
  OAIKeyboardButtonRequestUsers.cpp
  OAILabeledPrice.cpp
  OAILinkPreviewOptions.cpp
  OAILocation.cpp
  OAILocationAddress.cpp
  OAILoginUrl.cpp
  OAIMaskPosition.cpp
  OAIMaybeInaccessibleMessage.cpp
  OAIMenuButton.cpp
  OAIMenuButtonCommands.cpp
  OAIMenuButtonDefault.cpp
  OAIMenuButtonWebApp.cpp
  OAIMessage.cpp
  OAIMessageAutoDeleteTimerChanged.cpp
  OAIMessageEntity.cpp
  OAIMessageId.cpp
  OAIMessageOrigin.cpp
  OAIMessageOriginChannel.cpp
  OAIMessageOriginChat.cpp
  OAIMessageOriginHiddenUser.cpp
  OAIMessageOriginUser.cpp
  OAIMessageReactionCountUpdated.cpp
  OAIMessageReactionUpdated.cpp
  OAIOrderInfo.cpp
  OAIOwnedGift.cpp
  OAIOwnedGiftRegular.cpp
  OAIOwnedGiftUnique.cpp
  OAIOwnedGifts.cpp
  OAIPaidMedia.cpp
  OAIPaidMediaInfo.cpp
  OAIPaidMediaPhoto.cpp
  OAIPaidMediaPreview.cpp
  OAIPaidMediaPurchased.cpp
  OAIPaidMediaVideo.cpp
  OAIPaidMessagePriceChanged.cpp
  OAIPassportData.cpp
  OAIPassportElementError.cpp
  OAIPassportElementErrorDataField.cpp
  OAIPassportElementErrorFile.cpp
  OAIPassportElementErrorFiles.cpp
  OAIPassportElementErrorFrontSide.cpp
  OAIPassportElementErrorReverseSide.cpp
  OAIPassportElementErrorSelfie.cpp
  OAIPassportElementErrorTranslationFile.cpp
  OAIPassportElementErrorTranslationFiles.cpp
  OAIPassportElementErrorUnspecified.cpp
  OAIPassportFile.cpp
  OAIPhotoSize.cpp
  OAIPoll.cpp
  OAIPollAnswer.cpp
  OAIPollOption.cpp
  OAIPreCheckoutQuery.cpp
  OAIPreparedInlineMessage.cpp
  OAIProximityAlertTriggered.cpp
  OAIReactionCount.cpp
  OAIReactionType.cpp
  OAIReactionTypeCustomEmoji.cpp
  OAIReactionTypeEmoji.cpp
  OAIReactionTypePaid.cpp
  OAIRefundedPayment.cpp
  OAIReplyKeyboardMarkup.cpp
  OAIReplyKeyboardRemove.cpp
  OAIReplyParameters.cpp
  OAIReplyParameters_chat_id.cpp
  OAIResponseParameters.cpp
  OAIRevenueWithdrawalState.cpp
  OAIRevenueWithdrawalStateFailed.cpp
  OAIRevenueWithdrawalStatePending.cpp
  OAIRevenueWithdrawalStateSucceeded.cpp
  OAISentWebAppMessage.cpp
  OAISharedUser.cpp
  OAIShippingAddress.cpp
  OAIShippingOption.cpp
  OAIShippingQuery.cpp
  OAIStarAmount.cpp
  OAIStarTransaction.cpp
  OAIStarTransactions.cpp
  OAISticker.cpp
  OAIStickerSet.cpp
  OAIStory.cpp
  OAIStoryArea.cpp
  OAIStoryAreaPosition.cpp
  OAIStoryAreaType.cpp
  OAIStoryAreaTypeLink.cpp
  OAIStoryAreaTypeLocation.cpp
  OAIStoryAreaTypeSuggestedReaction.cpp
  OAIStoryAreaTypeUniqueGift.cpp
  OAIStoryAreaTypeWeather.cpp
  OAISuccessfulPayment.cpp
  OAISwitchInlineQueryChosenChat.cpp
  OAITextQuote.cpp
  OAITransactionPartner.cpp
  OAITransactionPartnerAffiliateProgram.cpp
  OAITransactionPartnerChat.cpp
  OAITransactionPartnerFragment.cpp
  OAITransactionPartnerOther.cpp
  OAITransactionPartnerTelegramAds.cpp
  OAITransactionPartnerTelegramApi.cpp
  OAITransactionPartnerUser.cpp
  OAIUniqueGift.cpp
  OAIUniqueGiftBackdrop.cpp
  OAIUniqueGiftBackdropColors.cpp
  OAIUniqueGiftInfo.cpp
  OAIUniqueGiftModel.cpp
  OAIUniqueGiftSymbol.cpp
  OAIUpdate.cpp
  OAIUser.cpp
  OAIUserChatBoosts.cpp
  OAIUserProfilePhotos.cpp
  OAIUsersShared.cpp
  OAIVenue.cpp
  OAIVideo.cpp
  OAIVideoChatEnded.cpp
  OAIVideoChatParticipantsInvited.cpp
  OAIVideoChatScheduled.cpp
  OAIVideoNote.cpp
  OAIVoice.cpp
  OAIWebAppData.cpp
  OAIWebAppInfo.cpp
  OAIWebhookInfo.cpp
  OAIWriteAccessAllowed.cpp
  OAI_answerCallbackQuery_post_request.cpp
  OAI_answerInlineQuery_post_request.cpp
  OAI_answerPreCheckoutQuery_post_request.cpp
  OAI_answerShippingQuery_post_request.cpp
  OAI_answerWebAppQuery_post_200_response.cpp
  OAI_answerWebAppQuery_post_request.cpp
  OAI_approveChatJoinRequest_post_request.cpp
  OAI_banChatMember_post_request.cpp
  OAI_banChatMember_post_request_chat_id.cpp
  OAI_banChatSenderChat_post_request.cpp
  OAI_closeForumTopic_post_request.cpp
  OAI_convertGiftToStars_post_request.cpp
  OAI_copyMessage_post_200_response.cpp
  OAI_copyMessage_post_request.cpp
  OAI_copyMessages_post_request.cpp
  OAI_createChatInviteLink_post_200_response.cpp
  OAI_createChatInviteLink_post_request.cpp
  OAI_createChatSubscriptionInviteLink_post_request.cpp
  OAI_createChatSubscriptionInviteLink_post_request_chat_id.cpp
  OAI_createForumTopic_post_200_response.cpp
  OAI_createForumTopic_post_request.cpp
  OAI_createInvoiceLink_post_request.cpp
  OAI_deleteBusinessMessages_post_request.cpp
  OAI_deleteChatStickerSet_post_request.cpp
  OAI_deleteMessage_post_request.cpp
  OAI_deleteMessages_post_request.cpp
  OAI_deleteMyCommands_post_request.cpp
  OAI_deleteStickerFromSet_post_request.cpp
  OAI_deleteStickerSet_post_request.cpp
  OAI_deleteStory_post_request.cpp
  OAI_deleteWebhook_post_request.cpp
  OAI_editChatInviteLink_post_request.cpp
  OAI_editChatSubscriptionInviteLink_post_request.cpp
  OAI_editForumTopic_post_request.cpp
  OAI_editGeneralForumTopic_post_request.cpp
  OAI_editMessageCaption_post_request.cpp
  OAI_editMessageLiveLocation_post_request.cpp
  OAI_editMessageReplyMarkup_post_request.cpp
  OAI_editMessageText_post_200_response.cpp
  OAI_editMessageText_post_200_response_result.cpp
  OAI_editMessageText_post_request.cpp
  OAI_editMessageText_post_request_chat_id.cpp
  OAI_editUserStarSubscription_post_request.cpp
  OAI_exportChatInviteLink_post_200_response.cpp
  OAI_exportChatInviteLink_post_request.cpp
  OAI_forwardMessage_post_request.cpp
  OAI_forwardMessage_post_request_from_chat_id.cpp
  OAI_forwardMessages_post_200_response.cpp
  OAI_forwardMessages_post_request.cpp
  OAI_forwardMessages_post_request_from_chat_id.cpp
  OAI_getAvailableGifts_post_200_response.cpp
  OAI_getBusinessAccountGifts_post_200_response.cpp
  OAI_getBusinessAccountGifts_post_request.cpp
  OAI_getBusinessAccountStarBalance_post_200_response.cpp
  OAI_getBusinessConnection_post_200_response.cpp
  OAI_getBusinessConnection_post_request.cpp
  OAI_getChatAdministrators_post_200_response.cpp
  OAI_getChatMemberCount_post_200_response.cpp
  OAI_getChatMember_post_200_response.cpp
  OAI_getChatMember_post_request.cpp
  OAI_getChatMenuButton_post_200_response.cpp
  OAI_getChatMenuButton_post_request.cpp
  OAI_getChat_post_200_response.cpp
  OAI_getCustomEmojiStickers_post_request.cpp
  OAI_getFile_post_200_response.cpp
  OAI_getFile_post_request.cpp
  OAI_getForumTopicIconStickers_post_200_response.cpp
  OAI_getGameHighScores_post_200_response.cpp
  OAI_getGameHighScores_post_request.cpp
  OAI_getMe_post_200_response.cpp
  OAI_getMyCommands_post_200_response.cpp
  OAI_getMyCommands_post_request.cpp
  OAI_getMyDefaultAdministratorRights_post_200_response.cpp
  OAI_getMyDefaultAdministratorRights_post_request.cpp
  OAI_getMyDescription_post_200_response.cpp
  OAI_getMyName_post_200_response.cpp
  OAI_getMyName_post_request.cpp
  OAI_getMyShortDescription_post_200_response.cpp
  OAI_getStarTransactions_post_200_response.cpp
  OAI_getStarTransactions_post_request.cpp
  OAI_getStickerSet_post_200_response.cpp
  OAI_getStickerSet_post_request.cpp
  OAI_getUpdates_post_200_response.cpp
  OAI_getUpdates_post_request.cpp
  OAI_getUserChatBoosts_post_200_response.cpp
  OAI_getUserChatBoosts_post_request.cpp
  OAI_getUserChatBoosts_post_request_chat_id.cpp
  OAI_getUserProfilePhotos_post_200_response.cpp
  OAI_getUserProfilePhotos_post_request.cpp
  OAI_getWebhookInfo_post_200_response.cpp
  OAI_giftPremiumSubscription_post_request.cpp
  OAI_leaveChat_post_request.cpp
  OAI_leaveChat_post_request_chat_id.cpp
  OAI_pinChatMessage_post_request.cpp
  OAI_postStory_post_200_response.cpp
  OAI_promoteChatMember_post_request.cpp
  OAI_readBusinessMessage_post_request.cpp
  OAI_refundStarPayment_post_request.cpp
  OAI_removeBusinessAccountProfilePhoto_post_request.cpp
  OAI_removeUserVerification_post_request.cpp
  OAI_restrictChatMember_post_request.cpp
  OAI_restrictChatMember_post_request_chat_id.cpp
  OAI_revokeChatInviteLink_post_request.cpp
  OAI_revokeChatInviteLink_post_request_chat_id.cpp
  OAI_savePreparedInlineMessage_post_200_response.cpp
  OAI_savePreparedInlineMessage_post_request.cpp
  OAI_sendAnimation_post_request_animation.cpp
  OAI_sendAudio_post_request_audio.cpp
  OAI_sendAudio_post_request_thumbnail.cpp
  OAI_sendChatAction_post_request.cpp
  OAI_sendContact_post_request.cpp
  OAI_sendDice_post_request.cpp
  OAI_sendDocument_post_request_document.cpp
  OAI_sendGame_post_request.cpp
  OAI_sendGift_post_request.cpp
  OAI_sendGift_post_request_chat_id.cpp
  OAI_sendInvoice_post_request.cpp
  OAI_sendLocation_post_request.cpp
  OAI_sendMediaGroup_post_200_response.cpp
  OAI_sendMediaGroup_post_request_media_inner.cpp
  OAI_sendMessage_post_200_response.cpp
  OAI_sendMessage_post_request.cpp
  OAI_sendMessage_post_request_chat_id.cpp
  OAI_sendMessage_post_request_reply_markup.cpp
  OAI_sendPaidMedia_post_request_chat_id.cpp
  OAI_sendPhoto_post_request_photo.cpp
  OAI_sendPoll_post_request.cpp
  OAI_sendSticker_post_request_sticker.cpp
  OAI_sendVenue_post_request.cpp
  OAI_sendVideoNote_post_request_video_note.cpp
  OAI_sendVideo_post_request_cover.cpp
  OAI_sendVideo_post_request_video.cpp
  OAI_sendVoice_post_request_voice.cpp
  OAI_setBusinessAccountBio_post_request.cpp
  OAI_setBusinessAccountGiftSettings_post_request.cpp
  OAI_setBusinessAccountName_post_request.cpp
  OAI_setBusinessAccountUsername_post_request.cpp
  OAI_setChatAdministratorCustomTitle_post_request.cpp
  OAI_setChatDescription_post_request.cpp
  OAI_setChatMenuButton_post_request.cpp
  OAI_setChatPermissions_post_request.cpp
  OAI_setChatStickerSet_post_request.cpp
  OAI_setChatTitle_post_request.cpp
  OAI_setCustomEmojiStickerSetThumbnail_post_request.cpp
  OAI_setGameScore_post_request.cpp
  OAI_setMessageReaction_post_request.cpp
  OAI_setMyCommands_post_request.cpp
  OAI_setMyDefaultAdministratorRights_post_request.cpp
  OAI_setMyDescription_post_request.cpp
  OAI_setMyName_post_request.cpp
  OAI_setMyShortDescription_post_request.cpp
  OAI_setPassportDataErrors_post_request.cpp
  OAI_setStickerEmojiList_post_request.cpp
  OAI_setStickerKeywords_post_request.cpp
  OAI_setStickerMaskPosition_post_request.cpp
  OAI_setStickerPositionInSet_post_request.cpp
  OAI_setStickerSetThumbnail_post_request_thumbnail.cpp
  OAI_setStickerSetTitle_post_request.cpp
  OAI_setUserEmojiStatus_post_request.cpp
  OAI_setWebhook_post_200_response.cpp
  OAI_stopMessageLiveLocation_post_request.cpp
  OAI_stopPoll_post_200_response.cpp
  OAI_stopPoll_post_request.cpp
  OAI_transferBusinessAccountStars_post_request.cpp
  OAI_transferGift_post_request.cpp
  OAI_unbanChatMember_post_request.cpp
  OAI_unpinChatMessage_post_request.cpp
  OAI_upgradeGift_post_request.cpp
  OAI_verifyChat_post_request.cpp
  OAI_verifyUser_post_request.cpp
  OAIDefaultApi.cpp
  OAIHelpers.cpp
  OAIHttpRequest.cpp
  OAIHttpFileElement.cpp
  OAIOauth.cpp
  )

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Gui

)

configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

install(
    FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

install(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

install(
    EXPORT ${PROJECT_NAME}Targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
